<resources>
    <string name="app_name">IoT Tech</string>
    <string name="no_internet_connection">Please check your internet connection</string>
    <string name="unable_to_connect_server">Unable to communicate with server Plaease Try Again Later</string>
    <string name="entry_pass" translatable="false">entry_pass_type</string>
    <string name="pass_check_point" translatable="false">passCheckPoint</string>
    <string name="info_slider_one_title" translatable="false">Change Language / Змінити мову / Изменить язык / भाषा बदलो</string>
    <string name="info_slider_one_desc">If You are not comfortable with default language. You can change it from here.</string>
    <string name="info_slider_one_button_text">Click Me</string>
    <string name="info_slider_two_title">User agreement</string>
    <string name="info_slider_two_desc">User Agreement is available on <a href="https://myiot.com/conditions/">https://myiot.com/conditions/</a> which contains all the terms and conditions of the agreement and is a proposal by myiot.com to enter.</string>
    <string name="info_slider_two_button_text">Read Agreement</string>
    <string name="info_slider_two_message">ATTENTION: If you do not agree to the terms of this user agreement, do not sign in/up.</string>
    <string name="info_slider_three_title">Grant access for easy to use</string>
    <string name="firebaseNetworkExp">Request has been failed due to a network error. Inspect the device\'s network connectivity state or retry later to resolve.</string>
    <string name="email_entered_already_exists">Please check your email address.</string>
    <string name="info_slider_three_desc">@string/info_explanation_for_permissions</string>
    <string name="info_slider_three_button_text">@string/grant_permission</string>
    <string name="info_slider_three_message">Permissions not granted</string>
    <string name="info_slider_four_title">For added security, locking this app is required</string>
    <string name="info_slider_four_desc">To keep you safe data is stored on your device not on centralized services.</string>
    <string name="info_slider_four_button_text">@string/action_sign_in</string>
    <string name="info_slider_four_message">@string/term_conditions</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="grant">Grant</string>
    <string name="cancel">Cancel</string>
    <string name="info_explanation_for_permissions">To fast and secure access of our service\'s, give permissions to access Contact, Storage etc.</string>
    <string name="lock_with_passcode">Lock With Passcode</string>
    <string name="term_conditions">By continuing, you agree to myiot.com Terms &amp; Conditions and Privacy Policy.</string>
    <string name="partial_permission_granted">Partial Permission Granted</string>
    <string name="all_permission_denied">All Permission Denied</string>
    <string name="all_permission_granted">All Permission Granted</string>
    <string name="unable_to_get_all_permissions">Unable to get all Permissions</string>
    <string name="go_to_setting">Go to Permissions to Grant all permissions</string>
    <string name="_package" translatable="false">package</string>
    <string name="action_sign_in">Sign in</string>
    <string name="title_activity_login">Sign in</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="choose_language">Choose Language</string>
    <string name="unable_to_change_language">Unable to change Language</string>
    <string name="login_status" translatable="false">loginStatus</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="forget_your_password">Forget your Password ?</string>
    <string name="remember_me">Remember me</string>
    <string name="register_here">Register Here.</string>
    <string name="invalid_connection_rechapcha">Rechapcha Verification failed. Check Connection and Try Again!!</string>
    <string name="check_connection">Please check your Internet Connection.</string>
    <string name="invalid_data_entered">Please check your Username/Password.</string>
    <string name="setup_passcode" translatable="false">setting_up_passcode</string>
    <string name="unknown_issue">Unknown Error. Please report it and Try Again!!</string>
    <string name="skip">Skip</string>
    <string name="create_passcode_message">Please set up a pin code that you will remember. You will use it every time you open the app. Change pin size from setting button</string>
    <string name="destination" translatable="false">destination</string>
    <string name="reset_pass" translatable="false">resetPass</string>
    <string name="security_check" translatable="false">securityCheck</string>
    <string name="create_passcode">Create Passcode</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="reenter_passcode">Re-enter Passcode</string>
    <string name="reenter_passcode_message">Please re-enter a pin code. This is for confirmation that you enter passcode correctly</string>
    <string name="pass_check_point_message">Please enter a pin code that you set up. This is the key to access your account</string>
    <string name="confirm_passcode">Confirm Passcode</string>
    <string name="number" translatable="false">number</string>
    <string name="exception_passcode">Something went wrong. Try Again.</string>
    <string name="wrong_passcode">Incorrect passcode. Please try again.\n You can try %d more time</string>
    <string name="passcode_not_match">Passcode don\'t match</string>
    <string name="passcode_successfully_set">Passcode Successfully Set</string>
    <string name="change_passcode_size">Change Passcode Size</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="from_there_only">from_there_only</string>
    <string name="market">Market</string>
    <string name="trades">Trades</string>
    <string name="orders">Orders</string>
    <string name="wallet">Wallet</string>
    <string name="account">Account</string>
    <string name="fingerprint_scanner_not_detected">Fingerprint Scanner not detected in Device</string>
    <string name="fingerprint_scanner_permission_not_granted">Permission not granted to use Fingerprint Scanner</string>
    <string name="add_lock_to_phone">Add Lock to your Phone in Settings</string>
    <string name="add_minimum_one_fingerprint">You should add atleast 1 Fingerprint to use this Feature</string>
    <string name="place_finger_on_scanner">Place your Finger on Scanner to Access the App.</string>
    <string name="auth_failed_try_again">Auth Failed. Try Again</string>
    <string name="auth_error_try_again">There was an Auth Error.</string>
    <string name="error_colon">Error:</string>
    <string name="auth_successful">You can now access the app.</string>
    <string name="theme_setting">theme_setting</string>
    <string name="please_wait">Please Wait...</string>
    <string name="search">Search</string>
    <string name="n_change_per" translatable="false">%s\u00A0%%</string>
    <string name="p_change_per" translatable="false">\u002B%s\u00A0%%</string>
    <string name="na_change_per" translatable="false">\u00A0%s\u00A0%%</string>
    <string name="low_market">Low\u00A0%s</string>
    <string name="high_market">High\u00A0%s</string>
    <string name="last_market" translatable="false">%s\u00A0%s</string>
    <string name="na" translatable="false">N.A.</string>
    <string name="rq_p_file_name" translatable="false">rq_p_f_n</string>
    <string name="requested_market_view_pos" translatable="false">rq_mkt_vpos</string>
    <string name="requested_order_view_pos" translatable="false">rq_order_vpos</string>
    <string name="choosed_pair_name" translatable="false">choosed_pair_name</string>
    <string name="choosed_pair_id" translatable="false">choose_pair_id</string>
    <string name="prompt_totp">TOTP</string>
    <string name="prompt_enter_code">Enter Code</string>
    <string name="invalid_otp">Please check your otp and Try Again!!</string>
    <string name="settings_user_is_first_login" translatable="false">is_first_login</string>
    <string name="settings_user_is_logged_in" translatable="false">is_logged_in</string>
    <string name="settings_user_has_passcode" translatable="false">user_has_passcode</string>
    <string name="settings_user_secret_public_key" translatable="false">secret_public_key</string>
    <string name="settings_user_passcode" translatable="false">user_passcode</string>
    <string name="settings_user_wrong_attempts_left" translatable="false">no_of_wrong_attempts_left</string>
    <string name="settings_user_last_login_attempt_time" translatable="false">last_login_attempt_time</string>
    <string name="settings_user_passcode_size" translatable="false">user_passcode_size</string>
    <string name="settings_user_passcode_org_size" translatable="false">user_passcode_org_size</string>
    <string name="requested_view_type_pos" translatable="false">requested_view_type_pos</string>
    <string name="requested_language" translatable="false">requested_language</string>
    <string name="requested_language_code" translatable="false">requested_language_code</string>
    <string name="requested_language_img_id" translatable="false">requested_language_img_id</string>
    <string name="start_up_desc">Ukrainian Currency Exchange \n Start Making Money with easy and fast</string>
    <string name="s_p_file_name" translatable="false">temp_org_sc</string>
    <string name="tc_pb_ky" translatable="false">tc_pb_ky</string>
    <string name="tc_val" translatable="false">tc_val</string>
    <string name="tc_rem" translatable="false">tc_rem</string>
    <string name="tc_time" translatable="false">tc_time</string>
    <string name="server_down">Internet Problem</string>
    <string name="reload">Reload</string>
    <string name="recheck">Recheck</string>
    <string name="internet_error_title">Application is unable to communicate with server</string>
    <string name="internet_error_sub_title">Please Check the Problem and Try Again!!!</string>
    <string name="internet_error_report">Raise the issue on www.richamster.com/appissue if it is not if it is not resolved.</string>
    <string name="internet_error_01_title_desc">This may be due to Server Side Problem or your internet connection is not available or very slow.</string>
    <string name="internet_error_02_title_desc">This is due because of internet connection.</string>
    <string name="desc" translatable="false">desc</string>
    <string name="button_type" translatable="false">button_type</string>
    <string name="change_language">Change Language</string>
    <string name="theme_off">No</string>
    <string name="theme_on">Yes</string>
    <string name="default_language">English</string>
    <string name="default_language_code">en</string>
    <string name="theme_default">@string/theme_off</string>
    <string name="use_fingerprint">Use Fingerprint</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="name">Name</string>
    <string name="shuffle_passcode">Shuffle Passcode</string>
    <string name="raise_issue">Raise Issue</string>
    <string name="no_internet">No Internet</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="already_have_account">Log In</string>
</resources>