<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/passcode_layout"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp">

    <ImageView
        android:id="@+id/home_item_icon"
        android:layout_width="18sp"
        android:layout_height="18sp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="@dimen/account_icon_margin_bottom"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_passcode" />

    <TextView
        android:id="@+id/home_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/home_item_icon"
        android:fontFamily="serif"
        android:text="@string/shuffle_passcode"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/home_item_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/shuffle_passcode_icon"
        android:fontFamily="serif"
        android:textColor="@color/textColorPrimary"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>
