<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:titleTextColor="@color/textColorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize">

            <ImageView
                android:id="@+id/backIcon"
                android:layout_width="wrap_content"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:src="@drawable/ic_arrow_back"
                android:textColor="@color/textColorPrimary" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/no_toolbar"
                app:titleTextColor="@color/textColorPrimary"
                app:title="@string/no_internet"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_toEndOf="@id/backIcon"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionBar"
        android:fontFamily="serif"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:text="@string/internet_error_title"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/title_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:fontFamily="serif"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingTop="4dp"
        android:paddingEnd="20dp"
        android:text="@string/internet_error_01_title_desc"
        android:textColor="@color/textColorSecondary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_desc"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/internet_error_sub_title"
        android:textAllCaps="false"
        android:textColor="@color/textColorPrimary" />

    <TextView
        android:id="@+id/report_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub_title"
        android:layout_marginStart="14dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="14dp"
        android:gravity="center"
        android:text="@string/internet_error_report"
        android:textColor="@color/textColorPrimary" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/report_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/raise_issue"
        android:textAllCaps="false" />

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/colorPrimaryDeepDark"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:cardUseCompatPadding="false">

        <Button
            android:id="@+id/reload"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:text="@string/reload"
            android:textColor="@color/textColorPrimary" />
    </android.support.v7.widget.CardView>

</RelativeLayout>