<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:padding="@dimen/info_slider_padding_top"
    tools:context=".InformationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/info_slider_layout_padding_bottom">

        <ImageView
            android:id="@+id/sliderTitleImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/info_slider_img_margin_bottom"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:keepScreenOn="true"
            android:textStyle="bold"
            tools:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/sliderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sliderTitleImage"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/info_slider_title_margin_bottom"
            android:fontFamily="serif"
            android:gravity="center"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/info_slider_title_txt_size"
            android:textStyle="bold"
            tools:text="@string/info_slider_four_title" />

        <TextView
            android:id="@+id/sliderDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sliderTitle"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/info_slider_desc_margin_bottom"
            android:autoLink="all"
            android:fontFamily="serif"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/info_slider_desc_line_space"
            android:linksClickable="true"
            android:textColor="@color/info_slider_desc_color"
            tools:text="@string/info_slider_four_desc" />

        <Button
            android:id="@+id/sliderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sliderDescription"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/info_slider_btn_margin_bottom"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="@color/info_button_text_color"
            android:lineSpacingExtra="@dimen/info_slider_btn_line_space"
            android:textSize="@dimen/info_slider_button_text_size"
            tools:text="@string/lock_with_passcode" />

        <TextView
            android:id="@+id/sliderMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sliderButton"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:autoLink="all"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/info_slider_mess_margin_bottom"
            android:linksClickable="true"
            android:textColor="@color/textColorSecondary"
            android:paddingBottom="@dimen/info_slider_message_padding_bottom"
            android:textSize="@dimen/info_slider_mess_txt_size"
            tools:text="@string/term_conditions" />

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>