<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_richamster_default"
    android:gravity="center"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:id="@+id/signup_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/action_sign_up"
            android:textColor="@color/textColorPrimary"
            android:textSize="30sp" />

        <!-- SignUp progress -->
        <ProgressBar
            android:id="@+id/signup_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_progress_bar_margin"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/email_signup_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_text_margin_bottom">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_name"
                    android:drawablePadding="@dimen/login_edit_text_drawable_padding"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="@dimen/login_edit_text_inner_padding"
                    android:singleLine="true"
                    android:textColor="@color/textColorPrimary"
                    android:textColorHint="@color/textColorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_text_margin_bottom">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_action_email"
                    android:drawablePadding="@dimen/login_edit_text_drawable_padding"
                    android:hint="@string/prompt_email"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/login_edit_text_inner_padding"
                    android:singleLine="true"
                    android:textColor="@color/textColorPrimary"
                    android:textColorHint="@color/textColorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_text_margin_bottom"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_action_pass"
                    android:drawablePadding="@dimen/login_edit_text_drawable_padding"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/login_edit_text_inner_padding"
                    android:singleLine="true"
                    android:textColor="@color/textColorPrimary"
                    android:textColorHint="@color/textColorPrimary"
                    tools:text="Surjit" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/error_message"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:text="@string/forget_your_password"
                android:textColor="@color/textColorRed"
                android:textSize="@dimen/login_forgot_text_size"
                android:visibility="gone" />

            <Button
                android:id="@+id/email_sign_up_button"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/lbg_login_button"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/action_sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/login_button_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/already_account"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/login_not_register_line_space"
                android:padding="10dp"
                android:text="@string/already_have_account"
                android:textColor="@color/textColorPrimary"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>